Add navigation dot for packages section

--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@
         <div class="nav-dot active" data-section="home"></div>
         <div class="nav-dot" data-section="about"></div>
         <div class="nav-dot" data-section="services"></div>
+        <div class="nav-dot" data-section="packages"></div>
         <div class="nav-dot" data-section="portfolio"></div>
         <div class="nav-dot" data-section="clients"></div>
         <div class="nav-dot" data-section="contact"></div>
